--- a/frontend/index/login.html
+++ b/frontend/index/login.html
@@ -78,7 +78,7 @@
 
   .new-user {
     display: flex;
-    justify-content:center;
+    justify-content: center;
     margin-top: 5%;
     padding: 2%;
     border-radius: 7px;
@@ -87,16 +87,8 @@
 </style>
 
 <body>
-  <!-- <header class="header-overlay header-logged">
-    <div class="home">
-      <a href="/" class="logo"><img src="/assets/favicon/favicon-32x32.png"></a>
-    </div>
-    <div class="user">
-      <a href="sign-up">Sign Up</a>
-    </div>
-  </header> -->
   <div class="title">
-    <a href="/frontend/index/index.html"><img src="/assets/favicon/favicon-32x32.png"></a>
+    <a href="/"><img src="/assets/favicon/favicon-32x32.png"></a>
     <h2 style="color: white;">Login</h2>
   </div>
   <div class="box">
