--- a/frontend/index/login.html
+++ b/frontend/index/login.html
@@ -106,7 +106,7 @@
     </form>
     <div class="new-user" style="color: white;">
       <p>Create new account?</p>
-      <a href="sign-up" style="color: rgb(219, 102, 255); padding-left: 2%;">Sign Up</a>
+      <a href="sign-up" style="color: rgb(219, 102, 255); padding-left: 2%;">Sign up</a>
     </div>
   </div>
 </body>
