--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -49,7 +49,7 @@
 
         <div class="user">
             <a href="login">Login</a>
-            <a href="sign-up">Sign Up</a>
+            <a href="sign-up">Sign up</a>
         </div>
     </header>
     <!--Title-->
