--- a/frontend/index/sign-up.html
+++ b/frontend/index/sign-up.html
@@ -91,7 +91,7 @@
       <div class="field">
         <label for="con-password">Confirm Password</label>
         <input type="text" id="password" name="con-password" placeholder="Confirm password"></div>
-      <div class="field"><button id="btnLogIn" onclick="senddata()">Sign Up</button></div>
+      <div class="field"><button id="btnLogIn" onclick="senddata()">Sign up</button></div>
     </form>
     <div class="new-user" style="color: white;">
       <p>Already have an account?</p>
