--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -19,24 +19,16 @@
         text-align: center;
         background: var(--main2-color);
         padding: 14px 16px;
-        margin-left: 12%;
-        margin-right: 12%;
-        margin-bottom: 6%;
-        margin-top: 8%;
+        margin: 8% 12% 6% 12%;
         width: 73%;
         font-size: 120%;
         border-radius: 25px;
         box-shadow: var(--shadow);
-
     }
 
     @media only screen and (max-width: 768px) {
         .title {
-            margin-top: 25%;
-            margin-left: 8%;
-            margin-right: 8%;
-            margin-bottom: 5%;
-            font-size: 100%;
+            margin: 25% 8% 5%;
         }
     }
 </style>
