--- a/frontend/index/sign-up.html
+++ b/frontend/index/sign-up.html
@@ -30,6 +30,13 @@
     margin-right: 40%;
   }
 
+  @media only screen and (max-width: 768px) {
+    .box {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+}
+
   .loginForm {
     background: var(--main2-color);
     box-shadow: var(--shadow);
