--- a/frontend/index/user.html
+++ b/frontend/index/user.html
@@ -26,7 +26,7 @@
             </ul>
         </div>-->
     </header>
-    <h1>Welcome user</h1>
+    <div><h1>Welcome user</h1></div>
 </body>
 <script>
 </script>
