--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -28,17 +28,16 @@
 
     @media only screen and (max-width: 768px) {
         .title {
-            margin: 25% 8% 5%;
+          margin: 15% 5%;
+          width: 90%;
         }
 
         .header-overlay {
-            display: flex;
-            justify-content: space-between;
-            align-self: center;
-            width: 100%;
-            top: 0%;
-            left: 0%;
-            padding: 2% 1%;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          position: relative;
+          padding: 2% 1%;
         }
     }
 </style>
@@ -55,14 +54,6 @@
         </div>
     </header>
     <!--Title-->
-    <div class="title">
-        <img src="/assets/favicon/android-chrome-192x192.png">
-        <h1>Nova Star</h1>
-    </div>
-    <div class="title">
-        <h1># Open space for you</h1>
-        <p> Play 'fun' Games with friends</p>
-    </div>
     <div class="title">
         <img src="/assets/favicon/android-chrome-192x192.png">
         <h1>Nova Star</h1>
