--- a/frontend/index/login.html
+++ b/frontend/index/login.html
@@ -67,7 +67,7 @@
     width: 100%;
     background: var(--main2-color);
     box-shadow: var(--shadow);
-    border: 0.5px solid black;
+    border: 0.5px rgb(0, 0, 158) solid;
     font-size: 16px;
     font-family: 'Open Sans', sans-serif;
   }
