--- a/frontend/index/user.html
+++ b/frontend/index/user.html
@@ -13,6 +13,10 @@
     body {
         color: white;
     }
+
+    .content {
+        margin-top: 20%;
+    }
 </style>
 
 <body>
@@ -20,13 +24,13 @@
         <div class="novastar">
             <a href="/" class="logo"><img src="/assets/favicon/favicon-32x32.png"></a>
         </div>
-        <!--<div class="nav">
+        <nav>
             <ul>
                 <li><a>Games</a></li>
             </ul>
-        </div>-->
+        </nav>
     </header>
-    <div><h1>Welcome user</h1></div>
+    <div class="content"><h1>Welcome user</h1></div>
 </body>
 <script>
 </script>
