--- a/frontend/index/user.html
+++ b/frontend/index/user.html
@@ -7,11 +7,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/frontend/css/index.css">
     <link rel="stylesheet" href="/frontend/css/animation.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>user</title>
 </head>
 <style>
     body {
         color: white;
+    }
+
+    .header-overlay {
+        position: fixed;
+        display: flex;
+        justify-content: space-between;
+        align-self: center;
+        width: 100%;
+        top: 0%;
+        left: 0%;
+        padding: 2% 1%;
+    }
+
+    .user {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .user>a {
+        padding-left: 20px;
+        font-size: 20px;
+        color: var(--text-color-2);
+    }
+
+    ul {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    ul>li {
+        padding-left: 5%;
+    }
+
+    @media only screen and (max-width: 768px) {
+        .title {
+            margin: 15% 5%;
+            width: 90%;
+        }
+
+        .header-overlay {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: relative;
+            padding: 2% 1%;
+        }
     }
 
     .content {
@@ -27,10 +75,14 @@
         <nav>
             <ul>
                 <li><a>Games</a></li>
+                <li><a><span class="material-symbols-outlined">account_circle</span></a></li>
             </ul>
+
         </nav>
     </header>
-    <div class="content"><h1>Welcome user</h1></div>
+    <div class="content">
+        <h1>Welcome user</h1>
+    </div>
 </body>
 <script>
 </script>
