--- a/frontend/index/user.html
+++ b/frontend/index/user.html
@@ -16,10 +16,10 @@
     }
 
     .header-overlay {
-        position: fixed;
         display: flex;
         justify-content: space-between;
         align-self: center;
+        background-color: rgb(52, 52, 110);
         width: 100%;
         top: 0%;
         left: 0%;
@@ -62,7 +62,7 @@
         }
     }
 
-    .content {
+    .games {
         margin-top: 20%;
     }
 </style>
@@ -77,11 +77,10 @@
                 <li><a>Games</a></li>
                 <li><a><span class="material-symbols-outlined">account_circle</span></a></li>
             </ul>
-
         </nav>
     </header>
-    <div class="content">
-        <h1>Welcome user</h1>
+    <div class="games">
+
     </div>
 </body>
 <script>
