--- a/frontend/index/user.html
+++ b/frontend/index/user.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/frontend/css/index.css">
     <link rel="stylesheet" href="/frontend/css/animation.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>user</title>
 </head>
 <style>
@@ -19,7 +20,7 @@
         display: flex;
         justify-content: space-between;
         align-self: center;
-        background-color: rgb(52, 52, 110);
+        background-color: var(--main-bg-color-1);
         width: 100%;
         top: 0%;
         left: 0%;
@@ -63,7 +64,15 @@
     }
 
     .games {
-        margin-top: 20%;
+        display: flex;
+        justify-content: center;
+        margin: 20% 12% 10%;
+    }
+
+    .in-game {
+        width: 60%;
+        height: 40%;
+        background-color: var(--main-bg-color-1);
     }
 </style>
 
@@ -80,11 +89,14 @@
         </nav>
     </header>
     <div class="games">
-
+        <div class="r-p-c in-game" onclick="r_p_c()">R-p_s</div>
+        <div class="t-t-t in-game" onclick="t_t_t()">tt</div>
     </div>
 </body>
 <script>
-    document.title = username;
+    function r_p_c() {
+       window.location.href = "/Rock-Paper-scissors";
+    }
 </script>
 
 </html>
