--- a/frontend/index/user.html
+++ b/frontend/index/user.html
@@ -90,7 +90,7 @@
     </header>
     <div class="games">
         <div class="r-p-c in-game" onclick="r_p_c()">R-p_s</div>
-        <div class="t-t-t in-game" onclick="t_t_t()">tt</div>
+        <div class="t-t-t in-game" onclick="t_t_t()">ttt</div>
     </div>
 </body>
 <script>
