--- a/frontend/index/login.html
+++ b/frontend/index/login.html
@@ -43,6 +43,7 @@
 
   .loginForm {
     background: var(--main-color-2);
+    /*backdrop-filter: blur(15px); */
     box-shadow: var(--shadow);
     padding: 5%;
     border-radius: 18px;
