--- a/frontend/index/user.html
+++ b/frontend/index/user.html
@@ -95,7 +95,7 @@
 </body>
 <script>
     function r_p_c() {
-       window.location.href = "/Rock-Paper-scissors";
+       window.location.href = "user/Rock-Paper-scissors";
     }
 </script>
 
