--- a/frontend/games/r-p-s.html
+++ b/frontend/games/r-p-s.html
@@ -11,14 +11,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <link href="/frontend/css/index.css" rel="stylesheet">
 <link href="/frontend/css/animation.css" rel="stylesheet">
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap');
-
-    body {
-        background: var(--main-color-1);
-    }
 
     .header-overlay {
         display: flex;
@@ -74,8 +71,9 @@
     }
 
     #main {
-        padding: 4%;
+        padding: 2%;
         font-family: 'Roboto', sans-serif;
+        font-size: 25px;
     }
 
     #score {
@@ -118,8 +116,7 @@
     }
 
     #stage {
-        padding: 4%;
-        margin-top: 1px;
+        padding: 2%;
     }
 
     #computer {
@@ -127,7 +124,7 @@
         justify-content: space-around;
         font-family: 'Roboto', sans-serif;
         background-color: var(--main-bg-color-2);
-        padding: 10px;
+        padding: 1%;
         font-size: 25px;
         border-radius: 20px;
         box-shadow: var(--shadow);
@@ -135,11 +132,11 @@
 
     #person {
         font-family: 'Roboto', sans-serif;
-        background-color: var(--main-bg-color-1);
+        background-color: var(--main-bg-color-3);
         display: flex;
         justify-content: space-around;
-        margin-top: 4px;
-        padding: 10px;
+        margin-top: 1%;
+        padding: 1%;
         font-size: 25px;
         border-radius: 20px;
         margin-top: 2%;
@@ -203,7 +200,7 @@
 <body>
     <header class="header-overlay header-logged">
         <div class="novastar">
-            <a href="/" class="logo"><img src="/assets/favicon/favicon-32x32.png"></a>
+            <a href="/user" class="logo"><img src="/assets/favicon/favicon-32x32.png"></a>
         </div>
         <nav>
             <ul>
