--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -36,6 +36,7 @@
         padding-left: 20px;
         font-size: 20px;
         color: var(--text-color-2);
+        cursor: pointer;
     }
 
     .title {
