--- a/frontend/index/login.html
+++ b/frontend/index/login.html
@@ -75,6 +75,7 @@
     border: 0.5px rgb(0, 0, 158) solid;
     font-size: 16px;
     font-family: 'Open Sans', sans-serif;
+    cursor: pointer;
   }
 
 
